--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Daniel Sousa <sousa.dfs@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/danielfsousa/dotenv-azure"
+    "url": "https://github.com/jazida-user/dotenv-azure"
   },
   "license": "MIT",
   "engines": {
@@ -94,8 +94,9 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.18",
-    "@types/node": "^10.14.17",
+    "@types/node": "^12.7.4",
     "colors": "^1.3.3",
     "commitizen": "^4.0.3",
     "coveralls": "^3.0.6",
@@ -110,12 +111,12 @@
     "prompt": "^1.0.0",
     "replace-in-file": "^4.1.3",
     "rimraf": "^3.0.0",
-    "rollup": "^1.20.3",
+    "rollup": "^1.21.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.24.0",
+    "rollup-plugin-typescript2": "^0.24.1",
     "semantic-release": "^15.13.24",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.11",
@@ -126,5 +127,12 @@
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.15.0",
     "typescript": "^3.6.2"
+  },
+  "dependencies": {
+    "@azure/arm-appconfiguration": "^1.0.0",
+    "@azure/identity": "^1.0.0-preview.3",
+    "@azure/keyvault-secrets": "^4.0.0-preview.4",
+    "@azure/ms-rest-nodeauth": "^2.0.5",
+    "dotenv": "^8.1.0"
   }
 }
