--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dotenv-azure",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "description": "",
   "keywords": [
     "dotenv",
@@ -13,7 +13,7 @@
     "environment variables",
     "env"
   ],
-  "main": "dist/dotenv-azure.umd.js",
+  "main": "dist/lib/dotenv-azure.js",
   "module": "dist/dotenv-azure.es5.js",
   "typings": "dist/types/dotenv-azure.d.ts",
   "files": [
@@ -29,10 +29,10 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "lint": "tslint --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
-    "start": "rollup -c rollup.config.ts -w",
+    "build": "tsc && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "start": "tsc --watch",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
@@ -84,7 +84,8 @@
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "printWidth": 120
   },
   "commitlint": {
     "extends": [
@@ -96,7 +97,7 @@
     "@commitlint/config-conventional": "^8.1.0",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.4",
+    "@types/node": "^10",
     "colors": "^1.3.3",
     "commitizen": "^4.0.3",
     "coveralls": "^3.0.6",
@@ -111,25 +112,18 @@
     "prompt": "^1.0.0",
     "replace-in-file": "^4.1.3",
     "rimraf": "^3.0.0",
-    "rollup": "^1.21.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.24.1",
     "semantic-release": "^15.13.24",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.11",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
-    "tslint": "^5.19.0",
+    "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.15.0",
-    "typescript": "^3.6.2"
+    "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@azure/arm-appconfiguration": "^1.0.0",
     "@azure/identity": "^1.0.0-preview.3",
     "@azure/keyvault-secrets": "^4.0.0-preview.4",
     "@azure/ms-rest-nodeauth": "^2.0.5",
