--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "files": [
     "dist"
   ],
-  "author": "Daniel Sousa <sousa.dfs@gmail.com>",
+  "author": {
+    "name": "Daniel Sousa",
+    "email": "sousa.dfs@gmail.com",
+    "url": "https://github.com/danielfsousa"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jazida-user/dotenv-azure"
@@ -115,7 +119,7 @@
     "semantic-release": "^15.13.24",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.11",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
@@ -124,9 +128,10 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@azure/core-arm": "1.0.0-preview.3",
+    "@azure/core-http": "1.0.0-preview.3",
     "@azure/identity": "^1.0.0-preview.3",
-    "@azure/keyvault-secrets": "^4.0.0-preview.4",
-    "@azure/ms-rest-nodeauth": "^2.0.5",
+    "@azure/keyvault-secrets": "^4.0.0-preview.5",
     "dotenv": "^8.1.0"
   }
 }
