--- a/package.json
+++ b/package.json
@@ -33,30 +33,35 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "lint": "eslint --ext .js,.ts",
-    "format": "prettier --write",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier '**/*.ts' --write",
+    "format:check": "prettier '**/*.ts' --check",
     "prebuild": "rimraf dist",
     "build": "tsc && typedoc --out docs --target es6 --theme minimal --mode file src",
     "start": "tsc --watch",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "validate": "yarn lint && yarn format:check && yarn test",
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
     "prepublish": "yarn build",
     "travis-deploy-once": "travis-deploy-once"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
-      "yarn format",
-      "yarn lint --fix",
+      "prettier --write",
+      "eslint --fix",
       "yarn test",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "config": {
     "commitizen": {
@@ -98,9 +103,8 @@
     "prompt": "^1.0.0",
     "replace-in-file": "^4.1.3",
     "rimraf": "^3.0.0",
-    "semantic-release": "^15.13.24",
+    "semantic-release": "^16.0.0-beta.24",
     "shelljs": "^0.8.3",
-    "travis-deploy-once": "^5.0.11",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.20.0",
