--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: |
+      - name: Install, test and build
+        run: |
           yarn
           yarn lint
           yarn format:check
@@ -28,15 +29,33 @@ jobs:
         env:
           CI: true
 
-  publish:
+  report-coverage:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: codecov/codecov-action@v1.0.2
+        name: Report coverage
         with:
           token: ${{secrets.CODECOV_TOKEN}}
+
+  deploy-docs:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
       - if: github.event_name != 'pull_request' && github.ref == 'master'
-        run: yarn deploy-docs
+        name: Deploy docs
+        uses: peaceiris/actions-gh-pages@v2.3.0
+        env:
+          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./docs
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - if: github.event_name != 'pull_request' && github.ref == 'master'
+        name: Create release
         run: yarn semantic-release
