--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/shelljs": "^0.8.5",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "codecov": "^3.5.0",
     "colors": "^1.3.3",
     "commitizen": "^4.0.3",
     "cross-env": "^5.2.1",
