--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,10 @@ jobs:
           CI: true
 
       - name: Report coverage
-        if: startsWith(matrix.node, '10')
+        if: startsWith(${{ matrix.node-version }}, '10')
         run: yarn codecov
         env:
-          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   deploy-docs:
     needs: build
