--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
+    "@jedmao/semantic-release-npm-github-config": "^1.0.6",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^10",
