--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dotenv-azure",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.0-development",
+  "description": "Load environment variables from Azure's services App Configuration, Key Vault or a .env file",
   "keywords": [
     "dotenv",
     "dotenv-safe",
@@ -13,13 +13,16 @@
     "environment variables",
     "env"
   ],
-  "main": "dist/dotenv-azure.umd.js",
-  "module": "dist/dotenv-azure.es5.js",
-  "typings": "dist/types/dotenv-azure.d.ts",
+  "main": "dist/lib/dotenv-azure.js",
+  "types": "dist/types/dotenv-azure.d.ts",
   "files": [
     "dist"
   ],
-  "author": "Daniel Sousa <sousa.dfs@gmail.com>",
+  "author": {
+    "name": "Daniel Sousa",
+    "email": "sousa.dfs@gmail.com",
+    "url": "https://github.com/danielfsousa"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/danielfsousa/dotenv-azure"
@@ -29,62 +32,36 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier '**/*.ts' --write",
+    "format:check": "prettier '**/*.ts' --check",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
-    "start": "rollup -c rollup.config.ts -w",
+    "build": "tsc && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "start": "tsc --watch",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "validate": "yarn lint && yarn format:check && yarn test",
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once"
+    "commit": "git-cz"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
       "prettier --write",
+      "eslint --fix",
+      "yarn test",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
     }
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testEnvironment": "node",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    },
-    "collectCoverageFrom": [
-      "src/*.{js,ts}"
-    ]
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
   },
   "commitlint": {
     "extends": [
@@ -94,13 +71,25 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
+    "@jedmao/semantic-release-npm-github-config": "^1.0.6",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.18",
-    "@types/node": "^10.14.17",
+    "@types/node": "^10",
+    "@types/shelljs": "^0.8.5",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "codecov": "^3.5.0",
     "colors": "^1.3.3",
     "commitizen": "^4.0.3",
-    "coveralls": "^3.0.6",
     "cross-env": "^5.2.1",
     "cz-conventional-changelog": "^3.0.2",
+    "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
     "jest-config": "^24.9.0",
@@ -110,21 +99,21 @@
     "prompt": "^1.0.0",
     "replace-in-file": "^4.1.3",
     "rimraf": "^3.0.0",
-    "rollup": "^1.20.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.24.0",
-    "semantic-release": "^15.13.24",
+    "semantic-release": "^16.0.0-beta.24",
     "shelljs": "^0.8.3",
-    "travis-deploy-once": "^5.0.11",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.3.0",
-    "tslint": "^5.19.0",
+    "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.15.0",
-    "typescript": "^3.6.2"
+    "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "@azure/core-arm": "1.0.0-preview.3",
+    "@azure/core-http": "1.0.0-preview.3",
+    "@azure/identity": "^1.0.0-preview.3",
+    "@azure/keyvault-secrets": "^4.0.0-preview.5",
+    "dotenv": "^8.1.0"
   }
 }
