--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@azure/core-http": "1.0.0-preview.3",
     "@azure/identity": "^1.0.0-preview.3",
     "@azure/keyvault-secrets": "^4.0.0-preview.5",
-    "dotenv": "^8.1.0"
+    "dotenv": "^8.1.0",
+    "sync-rpc": "^1.3.6"
   }
 }
