--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dotenv-azure",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0-alpha.3",
   "description": "Load environment variables from Azure's services App Configuration, Key Vault or a .env file",
   "keywords": [
     "dotenv",
@@ -75,7 +75,6 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
-    "@jedmao/semantic-release-npm-github-config": "^1.0.6",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^10",
@@ -108,6 +107,8 @@
     "@azure/core-http": "1.0.0-preview.3",
     "@azure/identity": "^1.0.0-preview.3",
     "@azure/keyvault-secrets": "^4.0.0-preview.5",
+    "@semantic-release/changelog": "^3.0.4",
+    "@semantic-release/git": "7.1.0-beta.3",
     "dotenv": "^8.1.0",
     "sync-rpc": "^1.3.6"
   }
