--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "@types/node": "^10",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
+    "@semantic-release/changelog": "^3.0.4",
+    "@semantic-release/git": "7.0.16",
     "codecov": "^3.5.0",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
@@ -96,7 +98,7 @@
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
-    "semantic-release": "^16.0.0-beta.24",
+    "semantic-release": "^15.13.24",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "typedoc": "^0.15.0",
@@ -107,8 +109,6 @@
     "@azure/core-http": "1.0.0-preview.3",
     "@azure/identity": "^1.0.0-preview.3",
     "@azure/keyvault-secrets": "^4.0.0-preview.5",
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/git": "7.1.0-beta.3",
     "dotenv": "^8.1.0",
     "sync-rpc": "^1.3.6"
   }
