--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Deploy docs
-        if: startsWith(matrix.node-version, '10') && github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: success() && startsWith(matrix.node-version, '10') && github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v2.3.0
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
@@ -54,7 +54,7 @@ jobs:
           PUBLISH_DIR: ./docs
 
       - name: Create release
-        if: startsWith(matrix.node-version, '10') && github.event_name == 'push'
+        if: success() && startsWith(matrix.node-version, '10') && github.event_name == 'push'
         run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
