--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,14 @@ name: CI
 on:
   push:
     branches:
-      - '*'
+      - "*"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10, 12]
+        node-version: [8, 10, 12]
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js
