--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,9 @@
-name: CI
+name: build
 
 on:
   push:
     branches:
-      - "alpha"
-      - "master"
-
+      - '*'
 jobs:
   build:
     runs-on: ubuntu-latest
