--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,12 @@
 name: build
 
 on:
+  pull_request:
   push:
     branches:
-      - '*'
+      - 'alpha'
+      - 'beta'
+      - 'master'
 jobs:
   build:
     runs-on: ubuntu-latest
