chore(package.json): add tags

--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0-alpha.5",
   "description": "Load environment variables from Azure's services App Configuration, Key Vault or a .env file",
   "keywords": [
+    "azure",
+    "app",
+    "config",
+    "configuration",
     "dotenv",
     "dotenv-safe",
-    "azure",
-    "key vault",
-    "app config",
+    "key",
     "vault",
-    "config",
-    "environment variables",
+    "key-vault",
+    "app-config",
+    "app-configuration",
+    "environment",
+    "variables",
     "env"
   ],
   "main": "dist/lib/dotenv-azure.js",
