refactor: add official @azure/app-configuration

--- a/package.json
+++ b/package.json
@@ -105,8 +105,7 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@azure/core-arm": "1.0.0-preview.3",
-    "@azure/core-http": "1.0.0-preview.3",
+    "@azure/app-configuration": "^1.0.0-preview.3",
     "@azure/identity": "^1.0.0-preview.3",
     "@azure/keyvault-secrets": "^4.0.0-preview.5",
     "dotenv": "^8.1.0",
