--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@azure/identity": "^1.0.0-preview.3",
     "@azure/keyvault-secrets": "^4.0.0-preview.5",
     "dotenv": "^8.1.0",
+    "p-limit": "^2.2.1",
     "sync-rpc": "^1.3.6"
   }
 }
