--- a/package.json
+++ b/package.json
@@ -110,9 +110,9 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@azure/app-configuration": "^1.0.0-preview.3",
-    "@azure/identity": "^1.0.0-preview.3",
-    "@azure/keyvault-secrets": "^4.0.0-preview.5",
+    "@azure/app-configuration": "1.0.0-preview.3",
+    "@azure/identity": "1.0.0-preview.5",
+    "@azure/keyvault-secrets": "4.0.0-preview.8",
     "bottleneck": "^2.19.5",
     "dotenv": "^8.1.0",
     "sync-rpc": "^1.3.6"
