--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
       "@commitlint/config-conventional"
     ]
   },
+  "resolutions": {
+    "typescript": "^3.7.2"
+  },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
