--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dotenv-azure",
-  "version": "1.0.1-beta.1",
+  "version": "1.0.0-beta.6",
   "description": "Load environment variables from Azure's services App Configuration, Key Vault or a .env file",
   "keywords": [
     "azure",
@@ -77,44 +77,47 @@
       "@commitlint/config-conventional"
     ]
   },
+  "resolutions": {
+    "typescript": "^3.7.2"
+  },
   "devDependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
-    "@semantic-release/changelog": "^3.0.4",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@semantic-release/changelog": "^3.0.5",
     "@semantic-release/git": "^7.1.0-beta.3",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12",
-    "@typescript-eslint/eslint-plugin": "^2.3.0",
-    "@typescript-eslint/parser": "^2.3.0",
-    "codecov": "^3.5.0",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.6",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
+    "codecov": "^3.6.1",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "^3.0.5",
+    "husky": "^3.0.9",
     "jest": "^24.9.0",
     "jest-config": "^24.9.0",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "semantic-release": "^16.0.0-beta.24",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "typedoc": "^0.15.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.2"
   },
   "dependencies": {
-    "@azure/app-configuration": "1.0.0-preview.3",
-    "@azure/identity": "1.0.0-preview.5",
-    "@azure/keyvault-secrets": "4.0.0-preview.8",
+    "@azure/app-configuration": "1.0.0-preview.7",
+    "@azure/identity": "1.0.0",
+    "@azure/keyvault-secrets": "4.0.0",
     "bottleneck": "^2.19.5",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "sync-rpc": "^1.3.6"
   }
 }
