--- a/package.json
+++ b/package.json
@@ -113,9 +113,9 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
-    "@azure/app-configuration": "1.0.0-preview.7",
-    "@azure/identity": "1.0.0",
-    "@azure/keyvault-secrets": "4.0.0",
+    "@azure/app-configuration": "1.0.1",
+    "@azure/identity": "1.0.2",
+    "@azure/keyvault-secrets": "4.0.2",
     "bottleneck": "^2.19.5",
     "dotenv": "^8.2.0",
     "sync-rpc": "^1.3.6"
