--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [8, 10, 12]
+        node-version: [10, 12, 13]
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js
@@ -44,7 +44,7 @@ jobs:
           CI: true
 
       - name: Report coverage
-        if: startsWith(matrix.node-version, '10')
+        if: startsWith(matrix.node-version, '10') && github.event_name == 'push'
         run: yarn codecov
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
