--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "dotenv-azure",
-  "version": "1.0.1",
+  "version": "1.0.0-beta.7",
   "description": "Load environment variables from Azure's services App Configuration, Key Vault or a .env file",
   "keywords": [
+    "azure",
+    "app",
+    "config",
+    "configuration",
     "dotenv",
     "dotenv-safe",
-    "azure",
-    "key vault",
-    "app config",
+    "key",
     "vault",
-    "config",
-    "environment variables",
+    "key-vault",
+    "app-config",
+    "app-configuration",
+    "environment",
+    "variables",
     "env"
   ],
   "main": "dist/lib/dotenv-azure.js",
@@ -24,7 +29,7 @@
   "author": {
     "name": "Daniel Sousa",
     "email": "sousa.dfs@gmail.com",
-    "url": "https://github.com/danielfsousa"
+    "url": "https://github.com/jazida-opensource"
   },
   "repository": {
     "type": "git",
@@ -32,7 +37,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "scripts": {
     "lint": "eslint . --ext .ts",
@@ -72,43 +77,47 @@
       "@commitlint/config-conventional"
     ]
   },
+  "resolutions": {
+    "typescript": "^3.7.2"
+  },
   "devDependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
-    "@jedmao/semantic-release-npm-github-config": "^1.0.6",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@semantic-release/changelog": "^3.0.5",
+    "@semantic-release/git": "^7.1.0-beta.3",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12",
-    "@typescript-eslint/eslint-plugin": "^2.3.0",
-    "@typescript-eslint/parser": "^2.3.0",
-    "codecov": "^3.5.0",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.6",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
+    "codecov": "^3.6.1",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "^3.0.5",
+    "husky": "^3.0.9",
     "jest": "^24.9.0",
     "jest-config": "^24.9.0",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
-    "semantic-release": "^15.13.24",
+    "semantic-release": "^16.0.0-beta.24",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "typedoc": "^0.15.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.2"
   },
   "dependencies": {
-    "@azure/core-arm": "1.0.0-preview.3",
-    "@azure/core-http": "1.0.0-preview.3",
-    "@azure/identity": "^1.0.0-preview.3",
-    "@azure/keyvault-secrets": "^4.0.0-preview.5",
-    "dotenv": "^8.1.0",
+    "@azure/app-configuration": "1.0.1",
+    "@azure/identity": "1.0.2",
+    "@azure/keyvault-secrets": "4.0.2",
+    "bottleneck": "^2.19.5",
+    "dotenv": "^8.2.0",
     "sync-rpc": "^1.3.6"
   }
 }
