--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,7 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"]
   },
-  "include": [
-    "src", "types/types.d.ts"
-  ]
+  "include": ["src", "types/types.d.ts"]
 }
