chore: remove git add from lint-staged

--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
     "{src,test}/**/*.ts": [
       "prettier --write",
       "eslint --fix",
-      "jest --bail --findRelatedTests",
-      "git add"
+      "jest --bail --findRelatedTests"
     ]
   },
   "config": {
