--- a/package.json
+++ b/package.json
@@ -49,13 +49,8 @@
     "start": "tsc --watch",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
-    "validate": "npm run lint && npm run format:check && npm run test"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "validate": "npm run lint && npm run format:check && npm run test",
+    "prepare": "husky install"
   },
   "commitlint": {
     "extends": [
