--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dotenv-azure",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Load environment variables from Azure's services App Configuration, Key Vault or a .env file",
   "keywords": [
     "azure",
@@ -71,7 +71,7 @@
   },
   "dependencies": {
     "@azure/app-configuration": "1.1.1",
-    "@azure/identity": "1.3.0",
+    "@azure/identity": "^3.1.2",
     "@azure/keyvault-secrets": "4.2.0",
     "bottleneck": "^2.19.5",
     "dotenv": "^10.0.0",
@@ -87,7 +87,7 @@
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "codecov": "^3.6.1",
-    "commitizen": "^4.0.3",
+    "commitizen": "^4.2.6",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^8.3.0",
@@ -97,17 +97,17 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^6.0.0",
-    "jest": "^24.9.0",
+    "jest": "^29.3.1",
     "jest-config": "^27.0.6",
     "lint-staged": "^11.0.0",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.0",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^29.0.4",
     "ts-node": "^10.0.0",
-    "typedoc": "^0.21.2",
+    "typedoc": "^0.23.24",
     "typescript": "^4.0.5"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   }
 }
